--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-satori",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": false,
   "files": [
     "dist"
@@ -8,6 +8,12 @@
   "main": "dist/vue-satori.common.js",
   "unpkg": "dist/vue-satori.common.js",
   "jsdelivr": "dist/vue-satori.common.js",
+  "homepage": "https://github.com/josueayala27/vue-satori",
+  "bugs": {
+    "url" : "https://github.com/josueayala27/vue-satori/issues",
+    "email" : "ayalavalencia11@gmail.com"
+  },
+  "keywords": ["satori", "satori-html", "vue-satori"],
   "scripts": {
     "serve": "vue-cli-service serve",
     "test:unit": "vue-cli-service test:unit",
